# LAB4_bryan_banegas_restoDeEjercicios

./: CMakeLists.txt  alimento.cpp  alimento.h  electronico.cpp  electronico.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  producto.cpp  producto.h  ropa.cpp  ropa.h  tarea.cpp  tarea.h  tareadiaria.cpp  tareadiaria.h  tareasemanal.cpp  tareasemanal.h
